# CookiX

./: .dockerignore  .gitignore  API_STABILITY.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LAUNCH.md  README.md  RELEASING.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  cookix.py  darija_vectordb.pkl  load_darija_to_vectordb.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
datasets/: darija_embeddings.py
examples/: pipe_compatibility.py  supply_chain.py  umbrella.py
gui/: visualizer_app.py
ops/: grafana-dashboard.json
scripts/: make_demo_video.py
src/cookix/: __init__.py  __main__.py  cli.py  client.py  database.py  demos.py  engine.py  model.py  relations.py
src/cookix/eval/: __init__.py  baselines.py  corpus.py  datasets.py  extraction.py  harness.py  linking.py  load.py  metrics.py  perf.py  report.py  sheaf_study.py
src/cookix/extraction/: __init__.py  extractor.py
src/cookix/server/: __init__.py  app.py  security.py
src/cookix/server/static/: index.html  sheaf.html
src/cookix/sheaf/: __init__.py  composition.py  learning.py
src/cookix/storage/: __init__.py  base.py  durable.py  kuzu_backend.py  memory.py  wal.py
src/cookix/topology/: __init__.py  index.py  signatures.py
tests/: test_backend_parity.py  test_client.py  test_database.py  test_demos.py  test_durability.py  test_eval.py  test_eval_datasets.py  test_eval_extraction.py  test_fuzz.py  test_linking.py  test_load.py  test_main_module.py  test_model.py  test_perf.py  test_relations.py  test_scale.py  test_server.py  test_server_roles.py  test_server_security.py  test_sheaf_learning.py  test_smoke_e2e.py  test_topo_index.py  test_topology_sheaf.py
tests/fixtures/: twowiki_sample.json
