[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cookix"
version = "1.1.0"
description = "The open-source topological-relational memory database. Reference implementation of the NoVectDB paradigm."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Ahmed Hafdi" }]
keywords = [
    "vector-database",
    "knowledge-graph",
    "retrieval-augmented-generation",
    "rag",
    "persistent-homology",
    "sheaf-theory",
    "topological-data-analysis",
    "novectdb",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "networkx>=3.0",
]

[project.optional-dependencies]
# Persistent-homology signatures (the topological re-ranking layer).
topology = ["ripser>=0.6", "persim>=0.3", "scipy>=1.10"]
# Sheaf-theoretic composition (experimental research layer).
sheaf = ["scipy>=1.10"]
# Embedded property-graph storage backend.
kuzu = ["kuzu>=0.4"]
# LLM-based relation extraction for ingestion.
llm = ["anthropic>=0.40"]
# HTTP server + browser reasoning-path explorer UI (`cookix serve`).
server = ["fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2.0"]
# Everything end users might want.
all = [
    "ripser>=0.6", "persim>=0.3", "scipy>=1.10", "kuzu>=0.4", "anthropic>=0.40",
    "fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2.0",
]
# Development + CI.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",  # required by fastapi.testclient for the server tests
]

[project.urls]
Homepage = "https://github.com/CookiXDB/CookiX"
Repository = "https://github.com/CookiXDB/CookiX"
Issues = "https://github.com/CookiXDB/CookiX/issues"

[project.scripts]
cookix = "cookix.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cookix"]
# Ship the UI assets (index.html, logo) inside the package.
artifacts = ["src/cookix/server/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI idiomatically calls Body/Depends/Query in argument defaults.
extend-immutable-calls = ["fastapi.Body", "fastapi.Depends", "fastapi.Query"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
